[gd_scene load_steps=15 format=2]

[ext_resource path="res://Fightscene.tscn" type="PackedScene" id=1]
[ext_resource path="res://Escenas/Doggo/Scripts/Doggo_Commander.gd" type="Script" id=2]
[ext_resource path="res://Escenas/Doggo/Scripts/Doggo_Fightscene.gd" type="Script" id=3]
[ext_resource path="res://Escenas/Doggo/Scenes/Doggo.tscn" type="PackedScene" id=4]
[ext_resource path="res://Escenas/Doggo/Scenes/Projectile.tscn" type="PackedScene" id=5]
[ext_resource path="res://Escenas/Doggo/Scripts/Menu_Doggo.gd" type="Script" id=6]
[ext_resource path="res://Escenas/Doggo/Scripts/Act_Panel_Doggo.gd" type="Script" id=7]
[ext_resource path="res://Escenas/Doggo/Scripts/MercyPanel_Doggo.gd" type="Script" id=8]
[ext_resource path="res://Escenas/Doggo/Scripts/SelectionPanel_Doggo.gd" type="Script" id=9]
[ext_resource path="res://Escenas/Doggo/Scripts/SpeechGlobe_Doggo.gd" type="Script" id=10]
[ext_resource path="res://Audio/Enemy(froggit)_theme.ogg" type="AudioStream" id=11]
[ext_resource path="res://Escenas/Doggo/Scripts/Doggo.gd" type="Script" id=12]
[ext_resource path="res://Escenas/Doggo/Scripts/Doggo_Spawner.gd" type="Script" id=13]
[ext_resource path="res://Escenas/Doggo/Scenes/Doggo_Pet_Dialog.tscn" type="PackedScene" id=14]

[node name="Fightscene" instance=ExtResource( 1 )]
script = ExtResource( 3 )
box_scale = -324.0
enemy_turn_duration = 2.25

[node name="Commander" parent="." index="4"]
script = ExtResource( 2 )
Projectile1 = ExtResource( 5 )
Dialogs = ExtResource( 14 )

[node name="Spawner0" parent="Commander" index="0"]
position = Vector2( 640, 352 )
script = ExtResource( 13 )

[node name="Spawner1" parent="Commander" index="1"]
position = Vector2( 256, 40 )
script = ExtResource( 13 )

[node name="Spawner2" parent="Commander" index="2"]
position = Vector2( 480, 40 )
script = ExtResource( 13 )

[node name="Spawner3" parent="Commander" index="3"]
position = Vector2( 496, 112 )
script = ExtResource( 13 )

[node name="Spawner4" parent="Commander" index="4"]
position = Vector2( 472, 160 )
script = ExtResource( 13 )

[node name="Menu" parent="GUI/VBoxContainer/MarginContainer2" index="0"]
script = ExtResource( 6 )

[node name="ActPanel" parent="GUI/VBoxContainer/MarginContainer2/Menu" index="1"]
script = ExtResource( 7 )

[node name="MercyPanel" parent="GUI/VBoxContainer/MarginContainer2/Menu" index="3"]
script = ExtResource( 8 )

[node name="SelectEnemy" parent="GUI/VBoxContainer/MarginContainer2/Menu" index="5"]
script = ExtResource( 9 )

[node name="Mixtape" parent="." index="8"]
stream = ExtResource( 11 )

[node name="Enemy" parent="." index="9" instance=ExtResource( 4 )]
position = Vector2( 420, 168 )
scale = Vector2( 1.7528, 1.94147 )
script = ExtResource( 12 )

[node name="TextureRect" parent="." index="11"]
margin_left = 490.0
margin_right = 615.0
margin_bottom = 190.0
script = ExtResource( 10 )
[connection signal="back_world" from="GUI" to="Enemy" method="_on_GUI_back_world"]
[connection signal="enough_pet" from="GUI/VBoxContainer/MarginContainer2/Menu/ActPanel" to="." method="_on_ActPanel_not_spared_anymore"]
[connection signal="enough_pet" from="GUI/VBoxContainer/MarginContainer2/Menu/ActPanel" to="Enemy" method="_on_ActPanel_not_spared_anymore"]
[connection signal="it_can_be_spared" from="GUI/VBoxContainer/MarginContainer2/Menu/ActPanel" to="." method="_on_ActPanel_it_can_be_spared"]
[connection signal="it_can_be_spared" from="GUI/VBoxContainer/MarginContainer2/Menu/ActPanel" to="Enemy" method="_on_ActPanel_it_can_be_spared"]
[connection signal="not_spared_anymore" from="GUI/VBoxContainer/MarginContainer2/Menu/ActPanel" to="." method="_on_ActPanel_not_spared_anymore"]
[connection signal="not_spared_anymore" from="GUI/VBoxContainer/MarginContainer2/Menu/ActPanel" to="Enemy" method="_on_ActPanel_not_spared_anymore"]

[editable path="GUI"]
